@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +23,7 @@ public class AreaServiceImpl implements AreaService{
         return areaRepository.findAllByDepartmentId(departmentId)
                 .stream()
                 .map(this::convertAreaTableToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
