@@ -1,14 +1,14 @@
 package com.myapp.portalnordsyspb.level5S.service;
 
-import com.myapp.portalnordsyspb.evaluationPU.dto.responseDto.DepartmentTableDto;
-import com.myapp.portalnordsyspb.evaluationPU.entity.Department;
 import com.myapp.portalnordsyspb.level5S.dto.Department5STableDto;
 import com.myapp.portalnordsyspb.level5S.entity.Department5S;
 import com.myapp.portalnordsyspb.level5S.repository.Department5SRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,11 +23,12 @@ public class Department5SServiceImpl implements Department5SService{
     }
 
     @Override
-    public List<Department5STableDto> getListDepartmentTable() {
+    @Cacheable(value = "Department5SService::getListDepartment5STable")
+    public List<Department5STableDto> getListDepartment5STable() {
         return department5SRepository.findAll()
                 .stream()
                 .map(this::convertDepartment5STableToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private Department5STableDto convertDepartment5STableToDto(Department5S department5S) {
